# u2fold

./: .gitignore  README.md  calibration_results.json  pyproject.toml  spec.json  spec_exec.json  spec_run.json  spec_train.json
docs/code_organization/: file_structure.md  module_structure.md
docs/spec/: schema.json  schema_doc.html
docs/thesis/: IEEEtran.cls  bibliography.bib  document.aux  document.bbl  document.blg  document.fdb_latexmk  document.fls  document.out  document.tex  pdflatex30111.fls  titlepage.aux  titlepage.tex
docs/variational_grounding/: main.aux  main.fdb_latexmk  main.fls  main.tex
scripts/: checkhealth.sh  compute_and_visualize_transmission_maps.py  compute_transmission_maps.py  generate_spec_schema.py  multiple_transmission_maps.py  preprocess_uieb.py  preprocess_uieb.sh  visualize_grayscale_image.py
src/: main.py
src/scripts/: generate_spec_schema.py  hyperparameter_experimentation.py  metric_calibration.py
src/scripts/hyperparameter_experimentation/: __init__.py  evaluate_model.py  generate_specs.py  search_best.py
src/u2fold/: __init__.py
src/u2fold/cli_parsing/: __init__.py  argparse.py  argument_from_field.py  cli_argument.py  config.py
src/u2fold/config_parsing/: __init__.py  config.py  config_dataclasses.py  generic.py  validation_and_parsing.py
src/u2fold/data/: __init__.py  dataset_splits.py  get_dataloaders.py  image_transformations.py
src/u2fold/data_parsing/: uieb.py
src/u2fold/exceptions/: dataset_pairing.py  dimension_error.py  empty_directory.py  unsupported_parameter.py
src/u2fold/math/: __init__.py  background_light_estimation.py  backup_dimension_switch.py  compute_first_term.py  convolution.py  estimate_transmission_map.py  guided_filter.py  linear_operators.py  primal_dual.py  proximities.py  rescale_image.py  transmission_map_estimation.py
tests/: conftest.py  test_background_light_estimation.py  test_cli_arguments.py  test_colorspace_conversions.py  test_config_parsing.py  test_dataloading.py  test_dataset_classes.py  test_math.py  test_model_subclassing.py  test_name_formatting.py  test_nested_map.py  test_tracking.py  test_transmission_map_estimation.py  test_validation.py  test_weight_handling.py  utils_testing.py
tests/utils/: file.py
(+140 files in other folders)
