[project]
name = "u2fold"
version = "0.3.0"
description = "U2FOLD: Underwater image unfolding"
readme = "README.md"
authors = [
    { name = "Frank William Hammond Espinosa", email = "frank.william.hammond@gmail.com" }
]
requires-python = ">=3.12"
keywords = ["Underwater imaging", "Unfolding", "Algorithm unrolling", "Algorithm unfolding"]
dependencies = [
    "pydantic>=2.11.7",
    "standard-imghdr>=3.13.0",
    "tensorboard>=2.19.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
]

[project.scripts]
u2fold = "u2fold:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
repository = "https://github.com/Frankwii/u2fold"

[dependency-groups]
dev = [
    "json-schema-for-humans>=1.4.1",
    "orjson>=3.11.0",
    "pytest>=8.4.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.12.3",
]
